samples/_failures_safe/1761550732_cc75d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e0975fb.c: In function ‘main’:
./samples/SAFE/__tmp_8e0975fb.c:125:13: error: expected declaration or statement at end of input
  125 |             for (int col = 0; col < 3; col++) {
      |             ^~~
./samples/SAFE/__tmp_8e0975fb.c:125:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8e0975fb.c:125:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8e0975fb.c:125:13: error: expected declaration or statement at end of input
